# promptdepot

./: .coverage  AGENTS.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
src/promptdepot/: manager.py
src/promptdepot/cli/: __init__.py  main.py  settings.py  templates.py  utils.py  versions.py
src/promptdepot/renderers/: __init__.py  core.py  jinja2.py  mako.py
src/promptdepot/stores/: __init__.py  core.py  local.py
tests/: test_cli_settings.py  test_cli_templates.py  test_cli_utils.py  test_cli_versions.py  test_manager.py  test_renderers_core.py  test_renderers_jinja2.py  test_renderers_mako.py  test_stores_local.py
tests/test_prompts/testing_prompt/: 1.0.0.md
tests/test_prompts/testing_prompt/1.0.0/: metadata.yml
tests/test_prompts/testing_prompt/1.1.0/: metadata.yml  template.md
tests/test_prompts/testing_prompt_incomplete/1.0.0/: metadata.yml
tests/test_prompts/testing_prompt_invalid/1.0.0/: metadata.yml  template.md
tests/test_prompts/testing_prompt_unexpected_file/: 1.0.0.md
tests/test_prompts/testing_prompt_unexpected_file/1.0.0/: metadata.yml
tests/test_prompts/testing_prompt_unexpected_folder/: 1.0.0.md
tests/test_prompts/testing_prompt_unexpected_folder/1.0.0/: metadata.yml
