[project]
name = "promptdepot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Aryan Curiel", email = "aryan.curiel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "mako>=1.3.10",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pyyaml>=6.0.3",
    "semver>=3.0.4",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
