[project]
name = "promptdepot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Aryan Curiel", email = "aryan.curiel@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pyyaml>=6.0.3",
    "semver>=3.0.4",
    "typing-extensions>=4.15.0",
]

[project.scripts]
promptdepot = "promptdepot.cli:main"

[project.optional-dependencies]
mako = [
    "mako>=1.3.10",
]
jinja2 = [
    "jinja2>=3.1.6",
]
cli = [
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "tomli>=2.3.0 ; python_version < '3.11'",
    "typer>=0.24.1",
]

[tool.promptdepot]
store_path = "promptdepot.stores.local.LocalTemplateStore"

[tool.promptdepot.store.config]
base_path = "tests/test_prompts"

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle errors - Import errors and indentation issues
    "E7",   # pycodestyle errors - Statement issues (multiple statements on one line, etc.)
    "E9",   # pycodestyle errors - Runtime errors (syntax errors, I/O errors)
    "F",    # Pyflakes - General Python code quality (unused imports, undefined names, etc.)
    "B",    # flake8-bugbear - Common bugs and design problems
    "S",    # flake8-bandit - Security issues and vulnerabilities
    "PERF", # Perflint - Performance anti-patterns
    "T20",  # flake8-print - Detect print statements
    "LOG",  # flake8-logging - Logging best practices
    "ASYNC", # flake8-async - Async/await best practices and common mistakes
    "C90",   # mccabe - Complexity checks
    "UP",
]

unfixable = ["B"]

ignore = [
    "PERF401", # manual-list-comprehension
    "PERF403", # manual-dict-comprehension
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011", "S101", "T20", "S108"]
"**/{docs,scripts,tests,tools}/*.py" = ["T20"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
